# exemplar-svm

./: .gitattributes  .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  Makefile  README.md  bitbucket-pipelines.yml
cmake/: ESVMConfig.cmake.in  ESVMUtils.cmake  FindFFTW.cmake  FindFeatureExtractorHOG.cmake  FindLibLinear.cmake  FindLibSVM.cmake  FindfeHOG.cmake  Findmvector.cmake
data/negatives/: negatives-hog-patch0.data  negatives-hog-patch1.data  negatives-hog-patch2.data  negatives-hog-patch3.data  negatives-hog-patch4.data  negatives-hog-patch5.data  negatives-hog-patch6.data  negatives-hog-patch7.data  negatives-hog-patch8.data
data/testing/: ID0003-probes-hog-patch0.data  ID0003-probes-hog-patch1.data  ID0003-probes-hog-patch2.data  ID0003-probes-hog-patch3.data  ID0003-probes-hog-patch4.data  ID0003-probes-hog-patch5.data  ID0003-probes-hog-patch6.data  ID0003-probes-hog-patch7.data  ID0003-probes-hog-patch8.data  ID0005-probes-hog-patch0.data  ID0005-probes-hog-patch1.data  ID0005-probes-hog-patch2.data  ID0005-probes-hog-patch3.data  ID0005-probes-hog-patch4.data  ID0005-probes-hog-patch5.data  ID0005-probes-hog-patch6.data  ID0005-probes-hog-patch7.data  ID0005-probes-hog-patch8.data  ID0006-probes-hog-patch0.data  ID0006-probes-hog-patch1.data  ID0006-probes-hog-patch2.data  ID0006-probes-hog-patch3.data  ID0006-probes-hog-patch4.data  ID0006-probes-hog-patch5.data  ID0006-probes-hog-patch6.data  ID0006-probes-hog-patch7.data  ID0006-probes-hog-patch8.data  ID0010-probes-hog-patch0.data  ID0010-probes-hog-patch1.data  ID0010-probes-hog-patch2.data  ID0010-probes-hog-patch3.data  ID0010-probes-hog-patch4.data  ID0010-probes-hog-patch5.data  ID0010-probes-hog-patch6.data  ID0010-probes-hog-patch7.data  ID0010-probes-hog-patch8.data  ID0024-probes-hog-patch0.data  ID0024-probes-hog-patch1.data  ID0024-probes-hog-patch2.data  ID0024-probes-hog-patch3.data  (+5 more)
img/ref/: roiID0003.tif  roiID0003.txt  roiID0003_permute[2,1].txt  roiID0005.tif  roiID0006.tif  roiID0010.tif  roiID0024.tif
inc/: esvm.h  esvmCreateSampleFiles.h  esvmEnsemble.h  esvmOptions.h  esvmPaths.h  esvmTests.h  esvmTypes.h  esvmUtils.h
include/: createSampleFiles.h  esvm.h  eval.h  generic.h
src/: createNegatives.cpp  createNegatives.h  createSampleFiles.cpp  createSampleFiles.h  ensembleEsvm.cpp  ensembleEsvm.h  esvm.cpp  esvm.h  esvmCreateSampleFiles.cpp  esvmEnsemble.cpp  esvmEnsemble.h  esvmOptions.h  esvmPaths.cpp  esvmTests.cpp  esvmTests.h  esvmTypes.h  esvmTypesDef.h  esvmUtils.cpp  esvmUtils.h  eval.cpp  eval.h  generic.h  helperFunctions.cpp  helperFunctions.h  imgUtils.cpp  imgUtils.h  logger.cpp  logger.h  main.cpp  norm.cpp  norm.h
